# linked-data-sparql

./: Cargo.toml
derive/: Cargo.toml
derive/src/: enum.rs  lib.rs  struct.rs
examples/: sparql.rs
src/: enum.rs  lib.rs
