[package]
name = "linked-data-sparql"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
linked-data-core = "0.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
syn = { version = "2.0.100", features = ["visit"] }
quote = "1.0.40"
iref = { version = "3.2.2", features = ["serde"] }

[patch.crates-io]
linked-data-core = { path = "../linked-data-core" }
